<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/backgroud">
    <TextView
        android:id="@+id/lblTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sec_confirm_title"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="@dimen/title_text_height"/>

    <TextView
        android:id="@+id/sec_lbl_Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Nombre"
        android:textStyle="bold"
        android:textSize="@dimen/dtl_text_height"/>
    <TextView
        android:id="@+id/sec_lbl_birthdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/frm_birth_date"
        android:textSize="@dimen/dtl_text_height"/>
    <TextView
        android:id="@+id/sec_lbl_tel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/frm_telephone"
        android:textSize="@dimen/dtl_text_height"/>
    <TextView
        android:id="@+id/sec_lbl_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/frm_email"
        android:textSize="@dimen/dtl_text_height"/>
    <TextView
        android:id="@+id/sec_lbl_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/frm_description"
        android:textSize="@dimen/dtl_text_height"/>
    <Button
        android:id="@+id/sec_edit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/frm_edit_btn"/>

</LinearLayout>
